# duviri-mood-clock

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html
.cargo/: config.toml
.github/workflows/: rust-wasm-build.yml
assets/: clock.js  main.css.map
assets/sass/: main.sass
src/: index.html  lib.rs  main.rs
