[package]
name = "duviri-mood-clock-wasm"
version = "0.1.0"
authors = ["Mifuyne <mifuyne@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
quote = "1.0.33"
serde = { version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
wasm-bindgen = { version = "0.2" }

[lib]
crate-type = ["cdylib"]