[package]
name = "duviri-mood-clock-wasm"
description = "A small webapp to track the current (and future) Duviri \"mood spirals\" in Warframe."
version = "0.1.0"
authors = ["Mifuyne <mifuyne@gmail.com>"]
repository = "https://github.com/mifuyne/duviri-mood-clock/"
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
wasm-bindgen = { version = "0.2" }

[lib]
crate-type = ["cdylib"]
